--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,10 +84,10 @@
         android:layout_width="241dp"
         android:layout_height="58dp"
         android:layout_marginTop="16dp"
-        android:text="HASIL"
-        app:cornerRadius="15dp"
         android:backgroundTint="#ffff00"
+        android:text="HASIL"
         android:textColor="@color/black"
+        app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
@@ -96,14 +96,35 @@
         android:id="@+id/txthsl"
         android:layout_width="94dp"
         android:layout_height="63dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="12dp"
         android:text="0"
-        android:textColor="#d4a328"
         android:textAlignment="center"
+        android:textColor="#d4a328"
         android:textSize="40dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonhHSL" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/RV"
+        android:layout_width="397dp"
+        android:layout_height="142dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txthsl" />
+
+    <TextView
+        android:id="@+id/txtSIMPAN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="16dp"
+        android:text="SIMPAN"
+        android:textColor="#d4a328"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonhHSL" />
 
 
